<resources>
    <string name="app_name">Blood Pressure Monitor App</string>
    <string name="selected_language">English</string>
    <string name="title_activity_language">Language</string>
    <string name="jan">Jan</string>
    <string name="feb">Feb</string>
    <string name="mar">Mar</string>
    <string name="apr">Apr</string>
    <string name="may">May</string>
    <string name="june">June</string>
    <string name="july">July</string>
    <string name="aug">Aug</string>
    <string name="sep">Sep</string>
    <string name="oct">Oct</string>
    <string name="nov">Nov</string>
    <string name="dec">Dec</string>
    <string-array name="days">
        <item>Jan 1</item>
        <item>Jan 2</item>
        <item>Jan 3</item>
        <item>Jan 4</item>
        <item>Jan 5</item>
        <item>Jan 6</item>
        <item>Jan 7</item>
        <item>Jan 8</item>
        <item>Jan 9</item>
        <item>Jan 10</item>
        <item>Jan 11</item>
        <item>Jan 12</item>
        <item>Jan 13</item>
        <item>Jan 14</item>
        <item>Jan 15</item>
        <item>Jan 16</item>
        <item>Jan 17</item>
        <item>Jan 18</item>
        <item>Jan 19</item>
        <item>Jan 20</item>
        <item>Jan 21</item>
        <item>Jan 22</item>
        <item>Jan 23</item>
        <item>Jan 24</item>
        <item>Jan 25</item>
        <item>Jan 26</item>
        <item>Jan 27</item>
        <item>Jan 28</item>
        <item>Jan 29</item>
        <item>Jan 30</item>
        <item>Jan 31</item>
        <item>Feb 1</item>
        <item>Feb 2</item>
        <item>Feb 3</item>
        <item>Feb 4</item>
        <item>Feb 5</item>
        <item>Feb 6</item>
        <item>Feb 7</item>
        <item>Feb 8</item>
        <item>Feb 9</item>
        <item>Feb 10</item>
        <item>Feb 11</item>
        <item>Feb 12</item>
        <item>Feb 13</item>
        <item>Feb 14</item>
        <item>Feb 15</item>
        <item>Feb 16</item>
        <item>Feb 17</item>
        <item>Feb 18</item>
        <item>Feb 19</item>
        <item>Feb 20</item>
        <item>Feb 21</item>
        <item>Feb 22</item>
        <item>Feb 23</item>
        <item>Feb 24</item>
        <item>Feb 25</item>
        <item>Feb 26</item>
        <item>Feb 27</item>
        <item>Feb 28</item>
        <item>Feb 29</item>
        <item>Mar 1</item>
        <item>Mar 2</item>
        <item>Mar 3</item>
        <item>Mar 4</item>
        <item>Mar 5</item>
        <item>Mar 6</item>
        <item>Mar 7</item>
        <item>Mar 8</item>
        <item>Mar 9</item>
        <item>Mar 10</item>
        <item>Mar 11</item>
        <item>Mar 12</item>
        <item>Mar 13</item>
        <item>Mar 14</item>
        <item>Mar 15</item>
        <item>Mar 16</item>
        <item>Mar 17</item>
        <item>Mar 18</item>
        <item>Mar 19</item>
        <item>Mar 20</item>
        <item>Mar 21</item>
        <item>Mar 22</item>
        <item>Mar 23</item>
        <item>Mar 24</item>
        <item>Mar 25</item>
        <item>Mar 26</item>
        <item>Mar 27</item>
        <item>Mar 28</item>
        <item>Mar 29</item>
        <item>Mar 30</item>
        <item>Mar 31</item>
        <item>Apr 1</item>
        <item>Apr 2</item>
        <item>Apr 3</item>
        <item>Apr 4</item>
        <item>Apr 5</item>
        <item>Apr 6</item>
        <item>Apr 7</item>
        <item>Apr 8</item>
        <item>Apr 9</item>
        <item>Apr 10</item>
        <item>Apr 11</item>
        <item>Apr 12</item>
        <item>Apr 13</item>
        <item>Apr 14</item>
        <item>Apr 15</item>
        <item>Apr 16</item>
        <item>Apr 17</item>
        <item>Apr 18</item>
        <item>Apr 19</item>
        <item>Apr 20</item>
        <item>Apr 21</item>
        <item>Apr 22</item>
        <item>Apr 23</item>
        <item>Apr 24</item>
        <item>Apr 25</item>
        <item>Apr 26</item>
        <item>Apr 27</item>
        <item>Apr 28</item>
        <item>Apr 29</item>
        <item>Apr 30</item>
        <item>May 1</item>
        <item>May 2</item>
        <item>May 3</item>
        <item>May 4</item>
        <item>May 5</item>
        <item>May 6</item>
        <item>May 7</item>
        <item>May 8</item>
        <item>May 9</item>
        <item>May 10</item>
        <item>May 11</item>
        <item>May 12</item>
        <item>May 13</item>
        <item>May 14</item>
        <item>May 15</item>
        <item>May 16</item>
        <item>May 17</item>
        <item>May 18</item>
        <item>May 19</item>
        <item>May 20</item>
        <item>May 21</item>
        <item>May 22</item>
        <item>May 23</item>
        <item>May 24</item>
        <item>May 25</item>
        <item>May 26</item>
        <item>May 27</item>
        <item>May 28</item>
        <item>May 29</item>
        <item>May 30</item>
        <item>May 31</item>
        <item>Jun 1</item>
        <item>Jun 2</item>
        <item>Jun 3</item>
        <item>Jun 4</item>
        <item>Jun 5</item>
        <item>Jun 6</item>
        <item>Jun 7</item>
        <item>Jun 8</item>
        <item>Jun 9</item>
        <item>Jun 10</item>
        <item>Jun 11</item>
        <item>Jun 12</item>
        <item>Jun 13</item>
        <item>Jun 14</item>
        <item>Jun 15</item>
        <item>Jun 16</item>
        <item>Jun 17</item>
        <item>Jun 18</item>
        <item>Jun 19</item>
        <item>Jun 20</item>
        <item>Jun 21</item>
        <item>Jun 22</item>
        <item>Jun 23</item>
        <item>Jun 24</item>
        <item>Jun 25</item>
        <item>Jun 26</item>
        <item>Jun 27</item>
        <item>Jun 28</item>
        <item>Jun 29</item>
        <item>Jun 30</item>
        <item>Jul 1</item>
        <item>Jul 2</item>
        <item>Jul 3</item>
        <item>Jul 4</item>
        <item>Jul 5</item>
        <item>Jul 6</item>
        <item>Jul 7</item>
        <item>Jul 8</item>
        <item>Jul 9</item>
        <item>Jul 10</item>
        <item>Jul 11</item>
        <item>Jul 12</item>
        <item>Jul 13</item>
        <item>Jul 14</item>
        <item>Jul 15</item>
        <item>Jul 16</item>
        <item>Jul 17</item>
        <item>Jul 18</item>
        <item>Jul 19</item>
        <item>Jul 20</item>
        <item>Jul 21</item>
        <item>Jul 22</item>
        <item>Jul 23</item>
        <item>Jul 24</item>
        <item>Jul 25</item>
        <item>Jul 26</item>
        <item>Jul 27</item>
        <item>Jul 28</item>
        <item>Jul 29</item>
        <item>Jul 30</item>
        <item>Jul 31</item>
        <item>Aug 1</item>
        <item>Aug 2</item>
        <item>Aug 3</item>
        <item>Aug 4</item>
        <item>Aug 5</item>
        <item>Aug 6</item>
        <item>Aug 7</item>
        <item>Aug 8</item>
        <item>Aug 9</item>
        <item>Aug 10</item>
        <item>Aug 11</item>
        <item>Aug 12</item>
        <item>Aug 13</item>
        <item>Aug 14</item>
        <item>Aug 15</item>
        <item>Aug 16</item>
        <item>Aug 17</item>
        <item>Aug 18</item>
        <item>Aug 19</item>
        <item>Aug 20</item>
        <item>Aug 21</item>
        <item>Aug 22</item>
        <item>Aug 23</item>
        <item>Aug 24</item>
        <item>Aug 25</item>
        <item>Aug 26</item>
        <item>Aug 27</item>
        <item>Aug 28</item>
        <item>Aug 29</item>
        <item>Aug 30</item>
        <item>Aug 31</item>
        <item>Sep 1</item>
        <item>Sep 2</item>
        <item>Sep 3</item>
        <item>Sep 4</item>
        <item>Sep 5</item>
        <item>Sep 6</item>
        <item>Sep 7</item>
        <item>Sep 8</item>
        <item>Sep 9</item>
        <item>Sep 10</item>
        <item>Sep 11</item>
        <item>Sep 12</item>
        <item>Sep 13</item>
        <item>Sep 14</item>
        <item>Sep 15</item>
        <item>Sep 16</item>
        <item>Sep 18</item>
        <item>Sep 19</item>
        <item>Sep 20</item>
        <item>Sep 21</item>
        <item>Sep 22</item>
        <item>Sep 23</item>
        <item>Sep 24</item>
        <item>Sep 25</item>
        <item>Sep 26</item>
        <item>Sep 27</item>
        <item>Sep 28</item>
        <item>Sep 29</item>
        <item>Sep 30</item>
        <item>Oct 1</item>
        <item>Oct 2</item>
        <item>Oct 3</item>
        <item>Oct 4</item>
        <item>Oct 5</item>
        <item>Oct 6</item>
        <item>Oct 7</item>
        <item>Oct 8</item>
        <item>Oct 9</item>
        <item>Oct 10</item>
        <item>Oct 11</item>
        <item>Oct 12</item>
        <item>Oct 13</item>
        <item>Oct 14</item>
        <item>Oct 15</item>
        <item>Oct 16</item>
        <item>Oct 17</item>
        <item>Oct 18</item>
        <item>Oct 19</item>
        <item>Oct 20</item>
        <item>Oct 21</item>
        <item>Oct 22</item>
        <item>Oct 23</item>
        <item>Oct 24</item>
        <item>Oct 25</item>
        <item>Oct 26</item>
        <item>Oct 27</item>
        <item>Oct 28</item>
        <item>Oct 29</item>
        <item>Oct 30</item>
        <item>Oct 31</item>
        <item>Nov 1</item>
        <item>Nov 2</item>
        <item>Nov 3</item>
        <item>Nov 4</item>
        <item>Nov 5</item>
        <item>Nov 6</item>
        <item>Nov 7</item>
        <item>Nov 8</item>
        <item>Nov 9</item>
        <item>Nov 10</item>
        <item>Nov 11</item>
        <item>Nov 12</item>
        <item>Nov 13</item>
        <item>Nov 14</item>
        <item>Nov 15</item>
        <item>Nov 16</item>
        <item>Nov 17</item>
        <item>Nov 18</item>
        <item>Nov 19</item>
        <item>Nov 20</item>
        <item>Nov 21</item>
        <item>Nov 22</item>
        <item>Nov 23</item>
        <item>Nov 24</item>
        <item>Nov 25</item>
        <item>Nov 26</item>
        <item>Nov 27</item>
        <item>Nov 28</item>
        <item>Nov 29</item>
        <item>Nov 30</item>
        <item>Dec 1</item>
        <item>Dec 2</item>
        <item>Dec 3</item>
        <item>Dec 4</item>
        <item>Dec 5</item>
        <item>Dec 6</item>
        <item>Dec 7</item>
        <item>Dec 8</item>
        <item>Dec 9</item>
        <item>Dec 10</item>
        <item>Dec 11</item>
        <item>Dec 12</item>
        <item>Dec 13</item>
        <item>Dec 14</item>
        <item>Dec 15</item>
        <item>Dec 16</item>
        <item>Dec 17</item>
        <item>Dec 18</item>
        <item>Dec 19</item>
        <item>Dec 20</item>
        <item>Dec 221</item>
        <item>Dec 21</item>
        <item>Dec 22</item>
        <item>Dec 23</item>
        <item>Dec 24</item>
        <item>Dec 25</item>
        <item>Dec 26</item>
        <item>Dec 27</item>
        <item>Dec 28</item>
        <item>Dec 29</item>
        <item>Dec 30</item>
        <item>Dec 31</item>
    </string-array>
    <string name="info">Info</string>
    <string name="delete">Delete</string>
    <string name="faq">FAQ</string>
    <string name="knowledge">Knowledge</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="delete_this_record">Delete this record?</string>
    <string name="cancel">Cancel</string>
    <string name="settings">Settings</string>
    <string name="language_options">Language Options</string>
    <string name="export_as_file">Export as file</string>
    <string name="rate_us">Rate Us</string>
    <string name="share">Share</string>
    <string name="feedback">Feedback</string>
    <string name="version">Version</string>
</resources>