<?xml version="1.0" encoding="utf-8"?>
<androidx.appcompat.widget.LinearLayoutCompat xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/deleteRecordConstraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/paddingxLarge"
    android:orientation="vertical"
    android:background="@color/black"
    android:minHeight="@dimen/medium7"
    android:minWidth="@dimen/large2.5"
    android:elevation="@dimen/small9"
    tools:context=".Activities.EditRecord">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/delete_this_record"
        android:textColor="@color/white"
        android:layout_marginVertical="@dimen/marginSmall"
        android:textSize="@dimen/smallText4"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.095"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.158" />

    <androidx.appcompat.widget.LinearLayoutCompat
        android:layout_width="match_parent"
        android:weightSum="10"
        android:layout_marginVertical="@dimen/small3"
        android:layout_height="wrap_content">

        <TextView
            android:layout_weight="7"
            android:id="@+id/cancelRecordBtn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cancel"
            android:textColor="@color/white"
            android:textSize="@dimen/smallText4"
            android:textStyle="bold"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.621"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.841"/>

        <TextView
            android:id="@+id/deleteRecordButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/delete"
            android:textColor="@color/white"
            android:textSize="@dimen/smallText4"
            android:textStyle="bold"
            android:layout_weight="3"
            android:textAlignment="viewEnd"
            app:layout_constraintBottom_toBottomOf="@+id/cancelRecordBtn"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toEndOf="@+id/cancelRecordBtn"
            app:layout_constraintTop_toTopOf="@+id/cancelRecordBtn" />

    </androidx.appcompat.widget.LinearLayoutCompat>

</androidx.appcompat.widget.LinearLayoutCompat>