<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/frameLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/black"
    tools:context=".Fragments.SettingsFragment">

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.035" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        app:layout_constraintGuide_percent="0.965" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.02" />

    <androidx.constraintlayout.widget.Guideline
        android:id="@+id/guideline5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        app:layout_constraintGuide_percent="0.98" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/settings"
        android:textColor="@color/white"
        android:textSize="@dimen/mediumText2"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.046"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toTopOf="@+id/guideline4"
        app:layout_constraintVertical_bias="0.023" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_bg3"
        android:orientation="vertical"
        android:paddingVertical="@dimen/paddingMedium"
        android:paddingHorizontal="@dimen/paddingSmall"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/textView5"
        app:layout_constraintVertical_bias="0.044">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small7"
            android:paddingVertical="@dimen/paddingLarge"
            android:text="@string/settings"
            android:textColor="@color/white"
            android:textSize="@dimen/smallText4" />

        <LinearLayout
            android:id="@+id/languageButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/paddingSmall"
            android:paddingVertical="@dimen/paddingLarge"
            android:weightSum="10">

            <ImageView
                android:layout_width="@dimen/small7"
                android:layout_height="@dimen/small7"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/language_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/language_options"
                android:textColor="@color/white"
                android:textSize="@dimen/smallText4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/exportButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/paddingSmall"
            android:paddingVertical="@dimen/paddingLarge"
            android:weightSum="10"
            android:visibility="gone"
            tools:layout_editor_absoluteX="-29dp"
            tools:layout_editor_absoluteY="270dp">

            <ImageView
                android:layout_width="@dimen/small7"
                android:layout_height="@dimen/small7"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/export_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/export_as_file"
                android:textColor="@color/white"
                android:textSize="@dimen/smallText4"
                android:textStyle="bold" />

        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:id="@+id/linearLayout2"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:background="@drawable/rounded_corners_bg3"
        android:orientation="vertical"
        android:paddingVertical="@dimen/paddingMedium"
        android:paddingHorizontal="@dimen/paddingSmall"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout"
        app:layout_constraintVertical_bias="0.026">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/small7"
            android:paddingVertical="@dimen/paddingLarge"
            android:text="More"
            android:textColor="@color/white"
            android:textSize="@dimen/smallText4" />

        <LinearLayout
            android:id="@+id/rateUsButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/paddingSmall"
            android:paddingVertical="@dimen/paddingLarge"
            android:weightSum="10">

            <ImageView
                android:layout_width="@dimen/small7"
                android:layout_height="@dimen/small7"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/star_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/rate_us"
                android:textColor="@color/white"
                android:textSize="@dimen/smallText4"
                android:textStyle="bold" />


        </LinearLayout>

        <LinearLayout
            android:id="@+id/shareButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/paddingSmall"
            android:paddingVertical="@dimen/paddingLarge"
            android:weightSum="10">

            <ImageView
                android:layout_width="@dimen/small7"
                android:layout_height="@dimen/small7"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/share_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/share"
                android:textColor="@color/white"
                android:textSize="@dimen/smallText4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/feedbackButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/paddingSmall"
            android:paddingVertical="@dimen/paddingLarge"
            android:weightSum="10">

            <ImageView
                android:layout_width="@dimen/small7"
                android:layout_height="@dimen/small7"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/feedback_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/feedback"
                android:textColor="@color/white"
                android:textSize="@dimen/smallText4"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/privacyPolicyButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingHorizontal="@dimen/paddingSmall"
            android:paddingVertical="@dimen/paddingLarge"
            android:weightSum="10">

            <ImageView
                android:layout_width="@dimen/small7"
                android:layout_height="@dimen/small7"
                android:layout_gravity="center_vertical"
                android:layout_weight="1"
                android:src="@drawable/privacy_policy_white" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="9"
                android:text="@string/privacy_policy"
                android:textColor="@color/white"
                android:textSize="@dimen/smallText4"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <TextView
        android:id="@+id/version"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/version"
        android:textColor="@color/white"
        android:textSize="@dimen/smallText3"
        app:layout_constraintBottom_toTopOf="@+id/guideline5"
        app:layout_constraintEnd_toStartOf="@+id/guideline3"
        app:layout_constraintStart_toStartOf="@+id/guideline2"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:layout_constraintVertical_bias="0.115" />

</androidx.constraintlayout.widget.ConstraintLayout>